--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
     	"components/jquery": "*",
     	"desandro/masonry": "*",
-    	"kraksoft/colorbox": "*"
+    	"kraksoft/colorbox": "*",
+        "desandro/imagesloaded": "dev-master"
     }
 }
